cmake_minimum_required(VERSION 3.0.0)
project(wet1 VERSION 0.1.0 LANGUAGES C CXX)
set(MTM_FLAGS_DEBUG "-std=c99 --pedantic-errors -Wall -Werror") 
set(MTM_FLAGS_RELEASE "${MTM_FLAGS_DEBUG} -DNDEBUG")
set(CMAKE_C_FLAGS ${MTM_FLAGS_DEBUG})
add_executable(my_executable Pirate.cpp Ship.cpp Queue.cpp Node.cpp Pair.cpp main24b1.cpp)